# onair

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/: dashboard.html
examples/: bulb_discover.rs  bulb_flash.rs  bulb_set.rs  presence_tail.rs
src/: autostart.rs  bulb.rs  config.rs  lib.rs  main.rs  models.rs  platform.rs  presence.rs  state.rs  web.rs
