[package]
name = "onair"
version = "0.1.3"
edition = "2021"
rust-version = "1.75"
description = "An on-air light. Watches Microsoft Teams and turns a Philips WiZ smart bulb red while you're on a call."
license = "MIT"
repository = "https://github.com/dannotes/onair"
homepage = "https://github.com/dannotes/onair"
readme = "README.md"
keywords = ["teams", "wiz", "smart-bulb", "presence", "on-air"]
categories = ["command-line-utilities", "network-programming"]
authors = ["Dan"]
exclude = [
    "docs/*",
    ".github/*",
    "examples/*",
]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3"
regex = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1"
thiserror = "2"
hex = "0.4"
once_cell = "1"
parking_lot = "0.12"
if-addrs = "0.13"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
